Fix - Add min width to viewport
Add min-width to body html element to stop content from overflowing
vertically when window is too small

--- a/root/frontend/src/App.css
+++ b/root/frontend/src/App.css
@@ -1,7 +1,11 @@
-.app-container{
-    display:flex; 
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
+body {
+  min-width: 600px;
+}
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 }
